--- a/feed/styles/navigation.css
+++ b/feed/styles/navigation.css
@@ -4,9 +4,11 @@ nav {
     display: flex; /* Используем flexbox для навигации */
     justify-content: space-around; /* Распределение элементов навигации */
     position: fixed; /* Фиксированное положение навигации */
-    bottom: 0; /* Положение внизу страницы */
-    width: 100%; /* Ширина навигации */
+    bottom: 10px; /* Поднимаем навигацию на 10 пикселей */
+    width: calc(100% - 40px); /* Ширина навигации не во всю ширину (например, 40px отступы по бокам) */
+    left: 20px; /* Отступ слева для центрирования */
     box-shadow: 0 -2px 5px rgba(0, 0, 0, 0.1); /* Тень для навигации */
+    border-radius: 8px; /* Скругленные углы */
 }
 
 nav button {
@@ -15,8 +17,13 @@ nav button {
     color: #007bff; /* Цвет текста для кнопок */
     font-size: 20px; /* Размер шрифта для кнопок */
     cursor: pointer; /* Указатель при наведении на кнопки */
+    transition: color 0.3s ease, transform 0.2s; /* Плавный переход для цвета и трансформации */
 }
 
 nav button:hover {
     color: #0056b3; /* Цвет текста при наведении на кнопки */
+    transform: scale(1.1); /* Увеличение кнопки при наведении */
+    /* Вы можете добавить другие эффекты, например, тень */
+    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2); /* Тень при наведении */
 }
+
