--- a/feed/styles/header.css
+++ b/feed/styles/header.css
@@ -31,10 +31,13 @@ padding-right: 20px;
 }
 
 .notification-icon {
-    width: 42px; /* Ширина иконки уведомлений */
-    height: 42px; /* Высота иконки уведомлений */
+    width: 32px; /* Ширина иконки уведомлений */
+    height: 32px; /* Высота иконки уведомлений */
+    max-width: 42px; /* Максимальная ширина иконки */
+    max-height: 42px; /* Максимальная высота иконки */
     display: flex; /* Используем flexbox для центрирования */
     justify-content: center; /* Центрируем содержимое */
     align-items: center; /* Центрируем содержимое по вертикали */
     cursor: pointer; /* Указатель при наведении */
+    overflow: hidden; /* Скрываем лишнее содержимое, если оно превышает размеры */
 }
