--- a/feed/styles/post.css
+++ b/feed/styles/post.css
@@ -1,7 +1,6 @@
 .post {
     width: 300px; /* Ширина поста по умолчанию */
     margin-bottom: 20px; /* Отступ снизу для постов */
-    text-align: center; /* Центрируем текст внутри поста */
 }
 
 img {
@@ -27,5 +26,10 @@ img {
 .show-more {
     color: blue; /* Цвет текста для кнопки "Показать полностью" */
     cursor: pointer; /* Указатель при наведении на текст */
-    margin-bottom: 10px; /* Отступ снизу */
+    margin-top: 5px; /* Отступ сверху для разделения с описанием */
+    display: inline-block; /* Чтобы кнопка отображалась в одной строке с текстом */
+}
+
+.icons {
+    margin-bottom: 10px;
 }
